Fixed Spacing

--- a/sponsors.css
+++ b/sponsors.css
@@ -49,7 +49,7 @@ body {
 }
 
 
-#sponsor-filthy{
+#sponsor-other{
     
     padding-top: 20px;
     padding-bottom: 20px;
